# petal

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/weather_agent/: agent.py  evals.yaml
petal/: __init__.py  agent.py  cli.py  store.py  tool.py  tracer.py
petal/eval/: __init__.py  runner.py  scorer.py
petal/eval/scorers/: __init__.py  cost.py  relevance.py  tool_accuracy.py
tests/: conftest.py  test_agent.py  test_eval.py  test_store.py  test_tool.py  test_tracer.py
